manifests/drone/agent.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-agent
  namespace: drone
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: drone
        role: agent
    spec:
      containers:
        - name: drone
          image: drone/drone
          args:
            - agent
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-socket
          ports:
            - containerPort: 8000
      volumes:
        - name: docker-socket
          hostPath:
            path: '/var/run/docker.sock'
