manifests/drone/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  namespace: drone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone
        role: server
    spec:
      containers:
        - name: drone-server
          image: drone/drone
          volumeMounts:
            - mountPath: /var/lib/drone
              name: drone-data
          ports:
            - containerPort: 8000
      volumes:
        - name: drone-data
          hostPath:
            path: '/var/data/drone/drone-data'
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-agent
  namespace: drone
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: drone
        role: agent
    spec:
      containers:
        - name: drone
          image: drone/drone
          args:
            - agent
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-socket
          ports:
            - containerPort: 8000
      volumes:
        - name: docker-socket
          hostPath:
            path: '/var/run/docker.sock'
