manifests/drone/server.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  namespace: drone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone
        role: server
    spec:
      containers:
        - name: drone
          image: drone/drone
          volumeMounts:
            - mountPath: /var/lib/drone
              name: drone-data
          ports:
            - containerPort: 8000
      volumes:
        - name: drone-data
          hostPath:
            path: '/var/data/drone/drone-data'
