manifests/drone/service.yml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: drone
spec:
  selector:
    app: drone
    role: server
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: LoadBalancer
